# outlap

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/outlap/: __init__.py  __main__.py  api.py  bus.py  circuit.py  engine.py  events.py  fixtures.py  state.py
backend/outlap/models/: __init__.py  base.py  deg.py  pit_window.py  undercut.py
backend/outlap/sources/: __init__.py  _fastf1_loader.py  base.py  replay.py
backend/tests/: test_api.py  test_bus_and_models.py  test_state_fold.py  test_strategy_models.py
docs/: ARCHITECTURE.md  PLAN.md  ROADMAP.md
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx  types.ts  useRaceSocket.ts
frontend/app/components/: TelemetryPanel.tsx  TimingTower.tsx  TrackMap.tsx
